--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model PetWorldOficial.Application.ViewModels.Schedule.CreateScheduleViewModel
+@model PetWorldOficial.Application.Commands.Schedule.CreateScheduleCommand
 
 @{
     ViewData["Title"] = "Agendar";
@@ -8,7 +8,9 @@
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw"><img src="/Images/agendamentoDeServicos.png" alt=""></h2>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/agendamentoDeServicos.png" alt="">
+    </h2>
     <br>
 </div>
 
@@ -60,7 +62,8 @@ else if (TempData["SuccessMessage"] != null)
 
 <div class="container">
     <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="Schedule" asp-action="Create" method="post">
-        <input type="hidden" asp-for="@Model.ServiceId" value="@Model.Service!.Id">
+        <input type="hidden" asp-for="@Model.ServiceId">
+        <input type="hidden" asp-for="@Model.ServicePrice">
         <input type="hidden" asp-for="@Model.UserId">
 
         <div class="col-md-4">
@@ -72,7 +75,7 @@ else if (TempData["SuccessMessage"] != null)
 
         <div class="col-md-4">
             <label asp-for="@Model.Time" class="form-label">Horário <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Time" id="time" class="form-control shadow-none" type="time">
+            <input asp-for="@Model.Time" id="time" class="form-control shadow-none" type="time" min="08:00" max="18:00">
             <span asp-validation-for="@Model.Time" class="text-danger"></span>
         </div>
 
@@ -82,22 +85,22 @@ else if (TempData["SuccessMessage"] != null)
                 <option value="" selected disabled>Selecione um pet</option>
                 @foreach (var animal in Model.Animals!)
                 {
-                    <option value="@animal.Id">@animal.Name</option>
+                    <option value="@animal!.Id">@animal.Name</option>
                 }
             </select>
             <span asp-validation-for="@Model.AnimalId" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Service.Name" class="form-label">Serviço <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Service.Name" class="form-control shadow-none" type="text" readonly>
-            <span asp-validation-for="@Model.Service.Name" class="text-danger"></span>
+            <label asp-for="@Model.ServiceName" class="form-label">Serviço <span style="color: red;">*</span></label>
+            <input asp-for="@Model.ServiceName" class="form-control shadow-none" type="text" readonly>
+            <span asp-validation-for="@Model.ServiceName" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Service.Price" class="form-label">Preço <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Service.Price" class="form-control shadow-none" type="text" value="@Model.Service.Price.ToString("C")" readonly>
-            <span asp-validation-for="@Model.Service.Price" class="text-danger"></span>
+            <label asp-for="@Model.ServicePrice" class="form-label">Preço <span style="color: red;">*</span></label>
+            <input asp-for="@Model.ServicePrice" class="form-control shadow-none" type="text" value="@Model.ServicePrice.ToString("C")" readonly>
+            <span asp-validation-for="@Model.ServicePrice" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
