--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PetWorldOficial.Application.ViewModels.Service
 @using PetWorldOficial.Domain.Enums
-@model IEnumerable<ServiceDetailsViewModel>
+@model IEnumerable<ServiceDetailsViewModel?>
 
 @{
     ViewData["Title"] = "Serviços";
@@ -30,49 +30,59 @@ else if (TempData["SuccessMessage"] != null)
     </div>
 }
 
-<div class="container">
-    @if (User.IsInRole(ERole.Admin.ToString()))
-    {
-        <div class="pb-2">
-            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Service" asp-action="Create">
-                <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Serviço
-            </a>
-        </div>
-    }
-    <div class="row">
-        @foreach (var service in Model)
+@if (Model is not null && Model.Count() != 0)
+{
+    <div class="container">
+        @if (User.IsInRole(ERole.Admin.ToString()))
         {
-            <div class="col-md-4 mb-4">
-                <div class="card h-100">
-                    <img src="/Images/@service.ImageUrl" class="ImagemCard card-img-top" alt="..." style="height: 200px; object-fit: cover; width: 100%">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">@service.Name</h5>
-                        <p>
-                            <b>Valor:</b> @service.Price.ToString("C")
-                        </p>
-
-                        @if (!User.IsInRole(ERole.Admin.ToString()))
-                        {
-                            <div class="d-grid gap-2">
-                                <a class="btn btn-dark" asp-controller="Schedule" asp-action="Create" asp-route-id="@service.Id">Agendar</a>
-                            </div>
-                        }
-                        else
-                        {
-                            <div class="d-flex justify-content-center align-items-center">
-                                <div style="padding-right: 15px">
-                                    <a style="width: 100px;" asp-controller="Service" asp-action="Update" asp-route-id="@service.Id" class="btn btn-dark me-2 shadow-none">Editar</a>
-                                </div>
-                                <div style="padding-left: 15px">
-                                    <a style="width: 100px" class="btn btn-danger shadow-none" asp-controller="Service" asp-action="Delete" asp-route-id="@service.Id">
-                                        Excluir
-                                    </a>
-                                </div>
-                            </div>
-                        }
-                    </div>
-                </div>
+            <div class="pb-2">
+                <a class="btn btn-dark fw-normal shadow-none" asp-controller="Service" asp-action="Create">
+                    <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Serviço
+                </a>
             </div>
         }
+        <div class="row">
+            @foreach (var service in Model)
+            {
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img src="/Images/@service!.ImageUrl" class="ImagemCard card-img-top" alt="..." style="height: 200px; object-fit: cover; width: 100%">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">@service.Name</h5>
+                            <p>
+                                <b>Valor:</b> @service.Price!.ToString("C")
+                            </p>
+
+                            @if (!User.IsInRole(ERole.Admin.ToString()))
+                            {
+                                <div class="d-grid gap-2">
+                                    <a class="btn btn-dark" asp-controller="Schedule" asp-action="Create" asp-route-id="@service.Id">Agendar</a>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div style="padding-right: 15px">
+                                        <a style="width: 100px;" asp-controller="Service" asp-action="Update" asp-route-id="@service.Id" class="btn btn-dark me-2 shadow-none">Editar</a>
+                                    </div>
+                                    <div style="padding-left: 15px">
+                                        <a style="width: 100px" class="btn btn-danger shadow-none" asp-controller="Service" asp-action="Delete" asp-route-id="@service.Id">
+                                            Excluir
+                                        </a>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
     </div>
-</div>
+}
+else
+{
+    <div class="container-fluid text-black py-3">
+        <br>
+        <h2 class="display-6 text-center fw">@TempData["NotFoundService"]</h2>
+    </div>
+}
