--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -35,25 +35,27 @@
     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Animal" asp-action="Delete" method="post">
         <input type="hidden" asp-for="@Model.Id">
         <input type="hidden" asp-for="@Model.UserId">
+        <input type="hidden" asp-for="@Model.CategoryId">
+        <input type="hidden" asp-for="@Model.RaceId">
 
-        <div class="col-md-8">
+        <div class="col-md-6">
             <label asp-for="@Model.Name" class="form-label">Nome</label>
             <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-2">
             <label asp-for="@Model.Gender" class="form-label">Gênero</label>
             <input asp-for="@Model.Gender" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Category" class="form-label">Espécie</label>
-            <input asp-for="@Model.Category" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
+            <label asp-for="@Model.RaceName" class="form-label">Raça</label>
+            <input asp-for="@Model.RaceName" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
         </div>
 
         <div class="col-md-8">
-            <label asp-for="@Model.Race" class="form-label">Raça</label>
-            <input asp-for="@Model.Race" type="text" class="form-control shadow-none" placeholder="Preço" readonly>
+            <label asp-for="@Model.CategoryName" class="form-label">Categoria</label>
+            <input asp-for="@Model.CategoryName" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
         </div>
 
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
