--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -86,12 +86,9 @@ else if (TempData["SuccessMessage"] != null)
                                     <b>Dono:</b> @animal.Owner!.Name
                                 </p>
                             }
-                            <p>
-                                <b>Espécie:</b> @animal.Category
-                            </p>
 
                             <p>
-                                <b>Raça:</b> @animal.Race
+                                <b>Raça:</b> @animal.Race.Name
                             </p>
                             <br>
                             <div class="d-flex justify-content-center align-items-center">
