--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -41,13 +41,13 @@ else if (TempData["SuccessMessage"] != null)
             <input type="hidden" asp-for="@Model.UserId">
         }
 
-        <div class="col-md-5">
+        <div class="col-md-6">
             <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label>
             <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Digite o nome">
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-2">
             <label asp-for="@Model.Gender" class="form-label">Gênero <span style="color: red;">*</span></label>
             <select asp-for="@Model.Gender" class="form-select shadow-none">
                 <option value="" selected disabled>Selecione o gênero</option>
@@ -59,7 +59,7 @@ else if (TempData["SuccessMessage"] != null)
             <span asp-validation-for="Gender" class="text-danger"></span>
         </div>
 
-        @if (Model.Users.Any())
+        @if (Model.Users.Count() > 0)
         {
             <div class="col-md-8">
                 <label asp-for="@Model.UserId" class="form-label">Dono <span style="color: red;">*</span></label>
@@ -67,23 +67,42 @@ else if (TempData["SuccessMessage"] != null)
                     <option value="" selected disabled>Selecione o dono</option>
                     @foreach (var user in Model.Users)
                     {
-                        <option value="@user!.Id">@user.Email</option>
+                        <option value="@user!.Id">@user!.Email</option>
                     }
                 </select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
         }
 
-        @* <div class="col-md-8"> *@
-        @*     <label asp-for="@Model.Species" class="form-label">Espécie<span style="color: red;">*</span></label> *@
-        @*     <input asp-for="@Model.Species" type="text" class="form-control shadow-none" placeholder="Digite a espécie"> *@
-        @*     <span asp-validation-for="Species" class="text-danger"></span> *@
-        @* </div> *@
-        <div class="col-md-8">
-            <label asp-for="@Model.Race" class="form-label">Raça<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Race" type="text" class="form-control shadow-none" placeholder="Digite a raça">
-            <span asp-validation-for="Race" class="text-danger"></span>
+        <div class="col-md-6">
+            <label asp-for="@Model.RaceId" class="form-label">Raça <span style="color: red;">*</span></label>
+            <select asp-for="@Model.RaceId" class="form-select shadow-none">
+                <option value="" selected disabled>Selecione a raça</option>
+                @foreach (var race in Model.Races)
+                {
+                    <option value="@race.Id">@race!.Name</option>
+                }
+            </select>
+            <span asp-validation-for="RaceId" class="text-danger"></span>
         </div>
+
+        <div class="col-md-2">
+            <label asp-for="@Model.Age" class="form-label">Idade</label>
+            <input asp-for="@Model.Age" type="text" class="form-control shadow-none" placeholder="Digite a idade">
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.CategoryId" class="form-label">Categoria <span style="color: red;">*</span></label>
+            <select asp-for="@Model.CategoryId" class="form-select shadow-none">
+                <option value="" selected disabled>Selecione a categoria</option>
+                @foreach (var category in Model.Categories)
+                {
+                    <option value="@category!.Id">@category!.Title</option>
+                }
+            </select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
             <br>
             <button class="btn btn-dark btn-lg" type="submit">Cadastrar</button>
@@ -91,6 +110,5 @@ else if (TempData["SuccessMessage"] != null)
     </form>
 
     <footer>
-
     </footer>
 </div>
