--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PetWorldOficial.Domain.Enums
+@using PetworldOficial.MVC.Utils
 @model IEnumerable<PetWorldOficial.Application.ViewModels.Animal.AnimalDetailsViewModel>
 
 @{
@@ -115,7 +116,10 @@ else if (TempData["SuccessMessage"] != null)
                                                     <strong>Dono:</strong> @animal.Owner?.Name
                                                 </p>
                                                 <p class="card-text">
-                                                    <strong>CPF do dono:</strong> @animal.Owner.Document
+                                                    <strong>CPF do dono:</strong> @animal.Owner?.Document
+                                                </p>
+                                                <p class="card-text">
+                                                    <strong>Gênero:</strong> @(Enum.Parse<EPetGender>(animal.Gender).GetDisplayName())
                                                 </p>
                                                 <p class="card-text">
                                                     <strong>Raça:</strong> @animal.Race
@@ -201,12 +205,9 @@ else if (TempData["SuccessMessage"] != null)
                                                     style="width: 150px; height:150px; object-fit: cover; border-radius: 5px"/>
                                             }
                                             <div>
-                                                <h5 class="card-title">@animal.Id - @animal.Name</h5>
+                                                <h5 class="card-title">@animal.Name</h5>
                                                 <p class="card-text">
-                                                    <strong>Dono:</strong> @animal.Owner?.Name
-                                                </p>
-                                                <p class="card-text">
-                                                    <strong>CPF do dono:</strong> @animal.Owner.Document
+                                                    <strong>Gênero:</strong> @(Enum.Parse<EPetGender>(animal.Gender).GetDisplayName())
                                                 </p>
                                                 <p class="card-text">
                                                     <strong>Raça:</strong> @animal.Race
