--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
@@ -98,7 +98,7 @@
 
         <div class="col-md-2">
             <label asp-for="BirthDate" class="form-label">Data de Nascimento</label>
-            <input asp-for="BirthDate" type="date" max="@DateTime.Today.ToString("yyyy-MM-dd")"
+            <input asp-for="BirthDate" type="date" min="@DateTime.Today.AddYears(-30).ToString("yyyy-MM-dd")" max="@DateTime.Today.ToString("yyyy-MM-dd")"
                    class="form-control shadow-none">
         </div>
 
