--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
@@ -118,16 +118,19 @@ else if (TempData["SuccessMessage"] != null)
                                             </p>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-column">
-                                        <a href="@Url.Action("Update", "Schedule", new { id = schedule.Id })"
-                                           class="btn btn-warning mb-2 d-flex align-items-center justify-content-center" style="border-radius: 10px;">
-                                            <i class="fas fa-edit me-2"></i> Editar
-                                        </a>
-                                        <a href="@Url.Action("Cancel", "Schedule", new { id = schedule.Id })"
-                                           class="btn btn-danger d-flex align-items-center justify-content-center" style="border-radius: 10px;">
-                                            <i class="fas fa-trash me-2"></i> Cancelar
-                                        </a>
-                                    </div>
+                                    @if (schedule.Status == ESchedullingStatus.Pending.ToString())
+                                    {
+                                        <div class="d-flex flex-column">
+                                            <a href="@Url.Action("Update", "Schedule", new { id = schedule.Id })"
+                                               class="btn btn-warning mb-2 d-flex align-items-center justify-content-center" style="border-radius: 10px;">
+                                                <i class="fas fa-edit me-2"></i> Editar
+                                            </a>
+                                            <a href="@Url.Action("Cancel", "Schedule", new { id = schedule.Id })"
+                                               class="btn btn-danger d-flex align-items-center justify-content-center" style="border-radius: 10px;">
+                                                <i class="fas fa-trash me-2"></i> Cancelar
+                                            </a>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                         }
